--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@ body {
 
 }
 .header__menu { 
-    z-index: 40;
+    z-index: 101;
     position: fixed;
     width: 100%;
     transition: 0.5s;
@@ -144,6 +144,7 @@ body {
         align-items: center;
         flex-wrap: wrap;
         margin-left: 10%;
+        margin-top: 10%;
     }
     .page__main-more {
         margin-top: 5%;
@@ -783,7 +784,7 @@ body {
     left: 0;
     opacity: 0;
     visibility: hidden;
-    z-index: 100;
+    z-index: 102;
     overflow-y: auto;
     overflow-x: hidden;
     transition: all 0.8s ease 0s;
@@ -945,82 +946,7 @@ body {
 
 
 //<media>==================================================
-@media (max-width: 1341px) {
-    .header__menu { 
-        top: 0px;
-        .header__logo {
-            // visibility: hidden;
-        }
-        .menu__list {
-           width: 50%;
-        }
-    }
-    .page__main-block {
-        margin-top: 10%;
-        .page__main-text {
-            display: flex;
-            flex-wrap: wrap;
-            width: 38%;
-            height: 25%;
-            margin-left: 5rem;
-            &_title {
-                display: flex;
-                flex-wrap: wrap;
-                margin-bottom: 3rem;
-            }
-            .page__main_btn {
-                width: 100%;
-                height: 70px;
-            }
-        }
-        .page__main-img {
-            width: 30%;
-            height: 30%;
-            z-index: -1;
-            display: flex;
-            flex-wrap: wrap;
-            margin-left: 13rem;
-        }
-    }
-    .page__rules {
-        .page__rules_title {
-            font-size: 245px;
-            line-height: 291px;
-        }
-        .rules__container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    }
-    .page__prices {
-        .price__title {
-            font-size: 245px;
-            line-height: 291px;
-        }
-    }
-}
-
-@media (min-width: 576px) and (max-width: 767.98px) {
-   
-}
-
-@media (min-width: 768px) and (max-width: 991.98px) {
-    
-   
-}
-
-@media (min-width: 992px) and (max-width: 1431.98px) {
-   
-}
-
-@media (min-width: 1800px) and (max-width: 2100px) {
-
-}
-
-@media (min-width: 2101px) {
- 
-}
+@import "media.scss";
 //</media>==================================================
 
 
