--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ body {
   margin-left: 34.4%;
   position: fixed;
   z-index: 50;
-  top: 5.5%;
+  top: 4%;
   border-radius: 10px;
 }
 .header__menu .menu__list .menu__item {
@@ -1098,6 +1098,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 30px 10px;
+  font-size: 14px;
 }
 .popup .popup__content {
   background-color: #172536;
@@ -1272,4 +1273,96 @@ body {
 .popup .popup__admin_rule .popup__criteria_text {
   margin-top: 2%;
   color: #CE4A08;
+}
+
+@media (min-width: 1800px) and (max-width: 2100px) {
+  .header__menu .menu__list {
+    margin-top: 0.7%;
+  }
+}
+@media (max-width: 1341px) {
+  .header__menu {
+    top: 0px;
+  }
+  .header__menu .menu__list {
+    width: 50%;
+    top: 5.5%;
+  }
+
+  .page__main-block {
+    margin-top: 10%;
+  }
+  .page__main-block .page__main-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 38%;
+    height: 25%;
+    margin-left: 5rem;
+  }
+  .page__main-block .page__main-text_title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 3rem;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    width: 100%;
+    height: 70px;
+  }
+  .page__main-block .page__main-img {
+    width: 40%;
+    height: 40%;
+    z-index: -1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 13rem;
+    margin-bottom: 5%;
+  }
+
+  .page__rules .page__rules_title {
+    font-size: 245px;
+    line-height: 291px;
+  }
+  .page__rules .rules__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .page__prices .price__title {
+    font-size: 245px;
+    line-height: 291px;
+  }
+
+  .popup .popup__content {
+    width: 55%;
+  }
+
+  .page__contacts .contacts__title {
+    font-size: 214px;
+    line-height: 300px;
+  }
+  .page__contacts .contacts-block__title {
+    font-size: 28px;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_telegram {
+    width: 25%;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_discord {
+    width: 25%;
+  }
 }
