--- a/css/style.scss
+++ b/css/style.scss
@@ -764,9 +764,9 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 12%;
-    height: 2%;
     background: #172536;
     height: 12%;
+    width: 100%;
     &_title {
         font-style: normal;
         font-weight: normal;
