--- a/css/style.css
+++ b/css/style.css
@@ -1419,6 +1419,7 @@ body {
     margin-top: 15%;
   }
   .page__main-block .page__main-text {
+    margin-left: 0rem;
     width: 42%;
   }
   .page__main-block .page__main-text_title {
@@ -1457,31 +1458,32 @@ body {
 }
 @media (max-width: 912.98px) {
   .header__menu {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    position: fixed;
     width: 100%;
-    background: #000;
+    height: 100%;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    background: #12161C;
+    -webkit-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+  }
+  .header__menu .header__logo {
+    margin-left: 0%;
+    border-bottom: 1px solid #464C54;
+    width: 100%;
   }
   .header__menu .menu__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    margin-top: 25%;
+    margin-left: 45%;
+    height: 50%;
     width: 10%;
-    visibility: hidden;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 
   .page__main-block {
-    margin-top: 20%;
+    margin-top: 15%;
     height: 85%;
   }
   .page__main-block .page__main-text {
@@ -1522,40 +1524,20 @@ body {
   }
 
   .page__rules .page__rules_title {
-    font-size: 15rem;
-  }
-  .page__rules .rules__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 100%;
-    margin-left: 4.5%;
+    font-size: 12rem;
   }
 
   .page__prices .price__title {
-    font-size: 15rem;
-  }
-
-  .popup .popup__content {
-    width: 65%;
+    font-size: 12rem;
   }
 
   .page__contacts .contacts__title {
-    font-size: 15rem;
-  }
-  .page__contacts .contacts-block__title {
-    font-size: 28px;
+    font-size: 10rem;
   }
   .page__contacts .contacts-block__buttons .btn__item-link_telegram {
-    width: 25%;
+    width: 30%;
   }
   .page__contacts .contacts-block__buttons .btn__item-link_discord {
-    width: 25%;
+    width: 30%;
   }
 }
