--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,9 @@ body {
         }
     }
 }
+.header__burger {
+    display: none;
+}
 .page__main-block {
     display: flex;
     align-items: center;
