--- a/css/media/media.scss
+++ b/css/media/media.scss
@@ -249,6 +249,7 @@
             bottom: 10px;
         }
     }
+    
     .header__menu { 
         position: fixed;
         width: 100%;
@@ -257,12 +258,16 @@
         left: 0;
         background: #12161C;
         transition: left 0.3s ease 0s;
+        border-bottom: 1px solid #464C54;
         &.active {
             height: 100%;
         }
         .header__logo {
             margin-left: 0%;
             width: 100%;
+            &.active {
+                border-bottom: 1px solid #464C54;
+            }
         }
         .menu__list {
             margin-top: 25%;
@@ -308,8 +313,12 @@
         }
     }
     .page__rules {
+        width: 80%;
         .page__rules_title {
             font-size: 10rem;
+        }
+        .rules__container {
+            margin-left: 10%;
         }
     }
     .page__prices {
@@ -342,4 +351,255 @@
             }
         }
     } 
+}
+@media (max-width: 480px) {
+    .header__burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        margin-top: -3%;
+        margin-left: 90%;
+        span {
+            position: absolute;
+            background: #fff;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            top: 9px;
+            transition: all 0.3s ease 0s;
+        }
+        &.active {
+            top: -40px;
+        }
+        &:before,
+        &:after {
+            content: '';
+            background: #fff;
+            position: absolute;
+            width: 100%;
+            height: 2%;
+            right: 0;
+            transition: all 0.3s ease 0s;
+        }
+        &:before {
+            top: 0;
+        }
+        &:after {
+            bottom: 0;
+        }
+        &.active span {
+            transform: scale(0);
+        }
+        &.active:before {
+            transform: rotate(45deg);
+            top: 9px;
+        }
+        &.active:after {
+            transform: rotate(-45deg);
+            bottom: 10px;
+        }
+    }
+    .header__menu { 
+        height: 10.5%;
+        .header__logo {
+            margin-top: 7%;
+            height: 10%;
+            &.active {
+                border-bottom: 1px solid #464C54;
+                height: 11.4%;
+                margin-top: -1.5%;
+            }
+        }
+    }
+    .page__main-block {
+        margin-top: 20%;
+        height: 85%;
+        .page__main-text {
+            display: flex;
+            flex-wrap: wrap;
+            width: 90%;
+            justify-content: center;
+            margin-top: 10%;
+            margin-left: 5%;
+            &_title {
+                font-size: 2rem;
+            }
+            &_desc  {
+                font-size: 1rem;
+            }
+            .page__main_btn {
+                margin-top: 5%;
+                height: 50px;
+            }
+        }
+        .page__main-more {
+            margin-top: 50%;
+            margin-left: -20%;
+        }
+    }
+    .page__rules {
+        .page__rules_title {
+            font-size: 6rem;
+        }
+    }
+    .page__prices {
+        .price__title {
+            font-size: 8rem;
+        }
+    }
+    .popup {
+        .popup__content {
+            width: 75%;
+        }
+        .privilege-vip__list {
+            &_item {
+                font-size: 14px;
+            }
+        }
+        .privilege-admin__list {
+            &_item {
+                font-size: 14px;
+            }
+        }
+        .popup__buttons {
+            .popup__buy_btnT {
+                height: 30%;
+                width: 20%;
+            }
+            .popup__buy_btnS {
+                height: 30%;
+                width: 20%;
+            }
+        }
+    }
+    .page__contacts {
+        .contacts__title {
+            font-size: 6rem;
+        }
+        .contacts-block__buttons {
+            .btn__item-link_telegram {
+                width: 40%;
+            }
+            .btn__item-link_discord {
+                width: 40%;
+            }
+        }
+    } 
+}
+@media (max-width: 375px) {
+    .header__menu { 
+        height: 10.5%;
+        .header__logo {
+            margin-top: 8.8%;
+            height: 10%;
+            &.active {
+                border-bottom: 1px solid #464C54;
+                height: 11.6%;
+                margin-top: -2.5%;
+            }
+        }
+    }
+    .page__main-block {
+        .page__main-text {
+            margin-top: 50%;
+            &_desc  {
+                margin-left: 15%;
+                font-size: 1rem;
+            }
+            .page__main_btn {
+                margin-top: 5%;
+                height: 50px;
+            }
+        }
+        .page__main-more {
+            margin-top: 60%;
+            margin-left: -32%;
+            &_text {
+                border: 1px solid #464C54;
+                background: #09111B;
+                border-radius: 2px;
+            }
+        }
+    }
+    .page__rules {
+        .page__rules_title {
+            font-size: 4.5rem;
+        }
+        .rules__container {
+            width: 80%;
+            margin-left: 20%;
+            &_title {
+                font-size: 32px;
+            }
+            .rules__list {
+                font-size: 14px;
+            }
+        }
+    }
+    .page__prices {
+        .price__title {
+            font-size: 5.5rem;
+        }
+        .donate-container {
+            .donate-block__vip {
+                width: 352px;
+                .privilege__buy_btn {
+                    width: 312px;
+                    margin-left: 4.5%;
+                }
+            }
+            .donate-block__admin {
+                width: 352px;
+                .privilege__buy_btn {
+                    width: 312px;
+                    margin-left: 4.5%;
+                }
+            }
+        }
+    }
+    .popup {
+        .popup__content {
+            width: 80%;
+        }
+        .privilege-vip__list {
+            &_item {
+                font-size: 12px;
+            }
+        }
+        .privilege-admin__list {
+            &_item {
+                font-size: 12px;
+            }
+        }
+        .popup__buttons {
+            .popup__buy_btnT {
+                height: 30%;
+                width: 30%;
+            }
+            .popup__buy_btnS {
+                height: 30%;
+                width: 30%;
+            }
+        }
+    }
+    .page__contacts {
+        .contacts__title {
+            font-size: 4.5rem;
+        }
+        .contacts-block__title {
+            margin-top: 0%;
+        }
+        .contacts-block__buttons {
+            .btn__item-link_telegram {
+                width: 40%;
+            }
+            .btn__item-link_discord {
+                width: 40%;
+            }
+        }
+    } 
+    .page__footer {
+        margin-top: 55%;
+    }
 }
