--- a/css/style.css
+++ b/css/style.css
@@ -1529,6 +1529,7 @@ body {
     background: #12161C;
     -webkit-transition: left 0.3s ease 0s;
     transition: left 0.3s ease 0s;
+    border-bottom: 1px solid #464C54;
   }
   .header__menu.active {
     height: 100%;
@@ -1536,6 +1537,9 @@ body {
   .header__menu .header__logo {
     margin-left: 0%;
     width: 100%;
+  }
+  .header__menu .header__logo.active {
+    border-bottom: 1px solid #464C54;
   }
   .header__menu .menu__list {
     margin-top: 25%;
@@ -1593,8 +1597,14 @@ body {
     margin-top: 0%;
   }
 
+  .page__rules {
+    width: 80%;
+  }
   .page__rules .page__rules_title {
     font-size: 10rem;
+  }
+  .page__rules .rules__container {
+    margin-left: 10%;
   }
 
   .page__prices .price__title {
@@ -1627,5 +1637,241 @@ body {
   }
   .page__contacts .contacts-block__buttons .btn__item-link_discord {
     width: 35%;
+  }
+}
+@media (max-width: 480px) {
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    margin-top: -3%;
+    margin-left: 90%;
+  }
+  .header__burger span {
+    position: absolute;
+    background: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger.active {
+    top: -40px;
+  }
+  .header__burger:before, .header__burger:after {
+    content: "";
+    background: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2%;
+    right: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger:before {
+    top: 0;
+  }
+  .header__burger:after {
+    bottom: 0;
+  }
+  .header__burger.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .header__burger.active:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 9px;
+  }
+  .header__burger.active:after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 10px;
+  }
+
+  .header__menu {
+    height: 10.5%;
+  }
+  .header__menu .header__logo {
+    margin-top: 7%;
+    height: 10%;
+  }
+  .header__menu .header__logo.active {
+    border-bottom: 1px solid #464C54;
+    height: 11.4%;
+    margin-top: -1.5%;
+  }
+
+  .page__main-block {
+    margin-top: 20%;
+    height: 85%;
+  }
+  .page__main-block .page__main-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 90%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 10%;
+    margin-left: 5%;
+  }
+  .page__main-block .page__main-text_title {
+    font-size: 2rem;
+  }
+  .page__main-block .page__main-text_desc {
+    font-size: 1rem;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    margin-top: 5%;
+    height: 50px;
+  }
+  .page__main-block .page__main-more {
+    margin-top: 50%;
+    margin-left: -20%;
+  }
+
+  .page__rules .page__rules_title {
+    font-size: 6rem;
+  }
+
+  .page__prices .price__title {
+    font-size: 8rem;
+  }
+
+  .popup .popup__content {
+    width: 75%;
+  }
+  .popup .privilege-vip__list_item {
+    font-size: 14px;
+  }
+  .popup .privilege-admin__list_item {
+    font-size: 14px;
+  }
+  .popup .popup__buttons .popup__buy_btnT {
+    height: 30%;
+    width: 20%;
+  }
+  .popup .popup__buttons .popup__buy_btnS {
+    height: 30%;
+    width: 20%;
+  }
+
+  .page__contacts .contacts__title {
+    font-size: 6rem;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_telegram {
+    width: 40%;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_discord {
+    width: 40%;
+  }
+}
+@media (max-width: 375px) {
+  .header__menu {
+    height: 10.5%;
+  }
+  .header__menu .header__logo {
+    margin-top: 8.8%;
+    height: 10%;
+  }
+  .header__menu .header__logo.active {
+    border-bottom: 1px solid #464C54;
+    height: 11.6%;
+    margin-top: -2.5%;
+  }
+
+  .page__main-block .page__main-text {
+    margin-top: 50%;
+  }
+  .page__main-block .page__main-text_desc {
+    margin-left: 15%;
+    font-size: 1rem;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    margin-top: 5%;
+    height: 50px;
+  }
+  .page__main-block .page__main-more {
+    margin-top: 60%;
+    margin-left: -32%;
+  }
+  .page__main-block .page__main-more_text {
+    border: 1px solid #464C54;
+    background: #09111B;
+    border-radius: 2px;
+  }
+
+  .page__rules .page__rules_title {
+    font-size: 4.5rem;
+  }
+  .page__rules .rules__container {
+    width: 80%;
+    margin-left: 20%;
+  }
+  .page__rules .rules__container_title {
+    font-size: 32px;
+  }
+  .page__rules .rules__container .rules__list {
+    font-size: 14px;
+  }
+
+  .page__prices .price__title {
+    font-size: 5.5rem;
+  }
+  .page__prices .donate-container .donate-block__vip {
+    width: 352px;
+  }
+  .page__prices .donate-container .donate-block__vip .privilege__buy_btn {
+    width: 312px;
+    margin-left: 4.5%;
+  }
+  .page__prices .donate-container .donate-block__admin {
+    width: 352px;
+  }
+  .page__prices .donate-container .donate-block__admin .privilege__buy_btn {
+    width: 312px;
+    margin-left: 4.5%;
+  }
+
+  .popup .popup__content {
+    width: 80%;
+  }
+  .popup .privilege-vip__list_item {
+    font-size: 12px;
+  }
+  .popup .privilege-admin__list_item {
+    font-size: 12px;
+  }
+  .popup .popup__buttons .popup__buy_btnT {
+    height: 30%;
+    width: 30%;
+  }
+  .popup .popup__buttons .popup__buy_btnS {
+    height: 30%;
+    width: 30%;
+  }
+
+  .page__contacts .contacts__title {
+    font-size: 4.5rem;
+  }
+  .page__contacts .contacts-block__title {
+    margin-top: 0%;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_telegram {
+    width: 40%;
+  }
+  .page__contacts .contacts-block__buttons .btn__item-link_discord {
+    width: 40%;
+  }
+
+  .page__footer {
+    margin-top: 55%;
   }
 }
