--- a/css/style.css
+++ b/css/style.css
@@ -1731,6 +1731,7 @@ body {
   .page__main-block .page__main-text .page__main_btn {
     margin-top: 5%;
     height: 50px;
+    width: 50%;
   }
   .page__main-block .page__main-more {
     margin-top: 50%;
@@ -1773,6 +1774,16 @@ body {
     width: 40%;
   }
 }
+@media (max-width: 414.98px) {
+  .page__main-block .page__main-more {
+    margin-top: 50%;
+    margin-left: -30%;
+  }
+
+  .page__contacts .contacts__title {
+    font-size: 5rem;
+  }
+}
 @media (max-width: 375px) {
   .header__menu {
     height: 10.5%;
@@ -1809,7 +1820,7 @@ body {
   }
 
   .page__rules .page__rules_title {
-    font-size: 4.5rem;
+    font-size: 5rem;
   }
   .page__rules .rules__container {
     width: 80%;
@@ -1823,7 +1834,7 @@ body {
   }
 
   .page__prices .price__title {
-    font-size: 5.5rem;
+    font-size: 6.5rem;
   }
   .page__prices .donate-container .donate-block__vip {
     width: 352px;
@@ -1864,14 +1875,97 @@ body {
   .page__contacts .contacts-block__title {
     margin-top: 0%;
   }
-  .page__contacts .contacts-block__buttons .btn__item-link_telegram {
-    width: 40%;
+}
+@media (max-width: 320.98px) {
+  .header__burger {
+    margin-left: 88%;
+    margin-top: -4%;
   }
-  .page__contacts .contacts-block__buttons .btn__item-link_discord {
-    width: 40%;
+  .header__burger.active {
+    top: -25px;
+  }
+  .header__burger.active:before {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: 10px;
+  }
+  .header__burger.active:after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 10px;
   }
 
-  .page__footer {
-    margin-top: 55%;
+  .header__menu .header__logo.active {
+    height: 10.1%;
+    margin-top: 0.8%;
+  }
+
+  .page__main-block .page__main-text {
+    margin-top: 40%;
+  }
+  .page__main-block .page__main-text_desc {
+    margin-left: 10%;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    padding: 5px 120px;
+    width: 40%;
+  }
+  .page__main-block .page__main-more {
+    margin-left: -40%;
+  }
+
+  .page__rules .page__rules_title {
+    font-size: 4.5rem;
+  }
+  .page__rules .rules__container {
+    width: 90%;
+  }
+
+  .page__prices .price__title {
+    font-size: 6.5rem;
+  }
+  .page__prices .donate-container .donate-block__vip {
+    width: 302px;
+    margin-left: 0%;
+  }
+  .page__prices .donate-container .donate-block__vip .select .select__head {
+    font-size: 16px;
+  }
+  .page__prices .donate-container .donate-block__vip .privilege-vip__list_item {
+    font-size: 14px;
+    margin-left: 5%;
+  }
+  .page__prices .donate-container .donate-block__vip .line {
+    margin-left: 1.5%;
+    width: 292px;
+  }
+  .page__prices .donate-container .donate-block__vip .privilege__buy_btn {
+    margin-left: 5%;
+    width: 200px;
+    padding: 5px 135px;
+  }
+  .page__prices .donate-container .donate-block__admin {
+    width: 302px;
+    margin-left: 0%;
+  }
+  .page__prices .donate-container .donate-block__admin .select .select__head {
+    font-size: 16px;
+  }
+  .page__prices .donate-container .donate-block__admin .privilege-admin__list_item {
+    font-size: 14px;
+    margin-left: 5%;
+  }
+  .page__prices .donate-container .donate-block__admin .line {
+    margin-left: 1.5%;
+    width: 292px;
+  }
+  .page__prices .donate-container .donate-block__admin .privilege__buy_btn {
+    margin-left: 5%;
+    width: 200px;
+    padding: 5px 135px;
+  }
+
+  .page__contacts .contacts__title {
+    font-size: 4rem;
   }
 }
